package(default_visibility = ["//visibility:public"])

constraint_setting(
    name = "os_release",
    #    default_constraint_value = ":unkown",
)

constraint_value(
    name = "bullseye",
    constraint_setting = ":os_release",
)

constraint_value(
    name = "bookworm",
    constraint_setting = ":os_release",
)

constraint_value(
    name = "trixie",
    constraint_setting = ":os_release",
)

platform(
    name = "x86_64_bullseye",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        ":bullseye",
    ],
)

platform(
    name = "aarch64_bullseye",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
        ":bullseye",
    ],
)

platform(
    name = "aarch64_bookworm",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
        ":bookworm",
    ],
)

platform(
    name = "x86_64_bookworm",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        ":bookworm",
    ],
)

platform(
    name = "x86_64_trixie",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        ":trixie",
    ],
)

platform(
    name = "aarch64_trixie",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
        ":trixie",
    ],
)
