load("@bazel_skylib//rules:build_test.bzl", "build_test")

package(default_visibility = ["//visibility:private"])

# Assert the stub_rootfs genrule builds.
build_test(
    name = "stub_rootfs_build_test",
    targets = ["//rootfs:stub_rootfs"],
)

# Assert the produced tar actually contains ./etc/os-release.
sh_test(
    name = "stub_rootfs_test",
    srcs = ["stub_rootfs_test.sh"],
    args = ["$(rootpath //rootfs:stub_rootfs)"],
    data = ["//rootfs:stub_rootfs"],
)
